[gd_scene load_steps=55 format=3 uid="uid://deayapj47ib4r"]

[ext_resource type="Script" path="res://scenes/House/wardroom.gd" id="1_gb3h2"]
[ext_resource type="Texture2D" uid="uid://cbssd5170fo4h" path="res://assets/sprites/House/Wardroom/wardroom.png" id="2_fj4dt"]
[ext_resource type="PackedScene" uid="uid://sndhm53bfar" path="res://scenes/Player/player.tscn" id="4_hf674"]
[ext_resource type="Texture2D" uid="uid://wybpatalcusl" path="res://assets/sprites/House/Wardroom/window_anim.png" id="4_ltasn"]
[ext_resource type="Texture2D" uid="uid://blk2vsyowvb0" path="res://assets/sprites/transition/transition_cloud_anim.png" id="5_8bx2e"]
[ext_resource type="Texture2D" uid="uid://r2rbu7in6pdd" path="res://assets/sprites/Characters/MC/open_window/MC_OpenWindow.png" id="5_024ic"]
[ext_resource type="PackedScene" uid="uid://c0u8yvqkliii7" path="res://scenes/Transition/TransitionScene.tscn" id="7_2f6xj"]
[ext_resource type="PackedScene" uid="uid://ctl6tvxhjk5p6" path="res://scenes/pauseMenu/pauseMenu.tscn" id="7_3s8bx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wyxf1"]
atlas = ExtResource("4_ltasn")
region = Rect2(0, 0, 224, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_07jnu"]
atlas = ExtResource("4_ltasn")
region = Rect2(224, 0, 224, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek58r"]
atlas = ExtResource("4_ltasn")
region = Rect2(448, 0, 224, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogja4"]
atlas = ExtResource("4_ltasn")
region = Rect2(672, 0, 224, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1gyg"]
atlas = ExtResource("4_ltasn")
region = Rect2(896, 0, 224, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1gir"]
atlas = ExtResource("4_ltasn")
region = Rect2(1120, 0, 224, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohrx2"]
atlas = ExtResource("4_ltasn")
region = Rect2(1344, 0, 224, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fb7o"]
atlas = ExtResource("4_ltasn")
region = Rect2(1568, 0, 224, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjkn8"]
atlas = ExtResource("4_ltasn")
region = Rect2(1792, 0, 224, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_sws4a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyxf1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07jnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek58r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogja4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1gyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1gir")
}],
"loop": false,
"name": &"part1",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohrx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fb7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjkn8")
}],
"loop": false,
"name": &"part2",
"speed": 3.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_dqrcv"]
atlas = ExtResource("5_8bx2e")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4845c"]
atlas = ExtResource("5_8bx2e")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnwcq"]
atlas = ExtResource("5_8bx2e")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjyl5"]
atlas = ExtResource("5_8bx2e")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_usd3h"]
atlas = ExtResource("5_8bx2e")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7m3hm"]
atlas = ExtResource("5_8bx2e")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rm3q"]
atlas = ExtResource("5_8bx2e")
region = Rect2(480, 0, 80, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_cogoe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqrcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4845c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnwcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjyl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usd3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7m3hm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rm3q")
}],
"loop": false,
"name": &"bye",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4j2c1"]
atlas = ExtResource("5_024ic")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wy1mi"]
atlas = ExtResource("5_024ic")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mvj5"]
atlas = ExtResource("5_024ic")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1g4oy"]
atlas = ExtResource("5_024ic")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pl7v7"]
atlas = ExtResource("5_024ic")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0s084"]
atlas = ExtResource("5_024ic")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ksv0h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4j2c1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wy1mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mvj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1g4oy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pl7v7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0s084")
}],
"loop": false,
"name": &"open",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k835c"]
size = Vector2(9, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_k18gh"]
atlas = ExtResource("5_024ic")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qmu7"]
atlas = ExtResource("5_024ic")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yx2qn"]
atlas = ExtResource("5_024ic")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6ra0"]
atlas = ExtResource("5_024ic")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qp86u"]
atlas = ExtResource("5_024ic")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fbe4"]
atlas = ExtResource("5_024ic")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ja4k0"]
atlas = ExtResource("5_024ic")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_il3et"]
atlas = ExtResource("5_024ic")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnkny"]
atlas = ExtResource("5_024ic")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkhi7"]
atlas = ExtResource("5_024ic")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_suhv0"]
atlas = ExtResource("5_024ic")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bp1mp"]
atlas = ExtResource("5_024ic")
region = Rect2(544, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1sfjo"]
atlas = ExtResource("5_024ic")
region = Rect2(576, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4sxap"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k18gh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qmu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yx2qn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6ra0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp86u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fbe4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ja4k0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_il3et")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnkny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkhi7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_suhv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bp1mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1sfjo")
}],
"loop": false,
"name": &"bye",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yx6jd"]
size = Vector2(20, 5)

[sub_resource type="Animation" id="Animation_2u2bv"]
resource_name = "hi"

[sub_resource type="Animation" id="Animation_au6jx"]
resource_name = "lightening"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transitions/light:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.827451), Color(0, 0, 0, 0.827451), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4k835"]
_data = {
"hi": SubResource("Animation_2u2bv"),
"lightening": SubResource("Animation_au6jx")
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jg1cu"]
texture = ExtResource("2_fj4dt")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 17.6, -16, 17.6, 16, -16, 16)
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_ww0y3"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_jg1cu")

[node name="Wardroom" type="Node2D"]
script = ExtResource("1_gb3h2")

[node name="TileMap" type="AnimatedSprite2D" parent="."]
position = Vector2(143, 64)
sprite_frames = SubResource("SpriteFrames_sws4a")
animation = &"part2"
frame = 2
frame_progress = 1.0

[node name="room_2" type="Marker2D" parent="."]
position = Vector2(143, 112)

[node name="Player" parent="." instance=ExtResource("4_hf674")]
position = Vector2(143, 112)
scale = Vector2(0.8, 0.8)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(1.5, 1.5)
limit_left = 32
limit_top = 0
limit_right = 256
limit_bottom = 136

[node name="transitions" type="CanvasLayer" parent="."]

[node name="clouds" type="AnimatedSprite2D" parent="transitions"]
visible = false
position = Vector2(144, 63)
scale = Vector2(4, 4.161)
sprite_frames = SubResource("SpriteFrames_cogoe")
animation = &"bye"

[node name="light" type="ColorRect" parent="transitions"]
visible = false
offset_left = -31.0
offset_top = -57.0
offset_right = 316.0
offset_bottom = 217.0
color = Color(0, 0, 0, 0.827451)

[node name="char_opening_win" type="AnimatedSprite2D" parent="."]
position = Vector2(143, 26)
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_ksv0h")
animation = &"open"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(143.5, 23)
shape = SubResource("RectangleShape2D_k835c")

[node name="char_going" type="AnimatedSprite2D" parent="."]
position = Vector2(143.1, 26)
scale = Vector2(0.80625, 0.8)
sprite_frames = SubResource("SpriteFrames_4sxap")
animation = &"bye"
frame = 12
frame_progress = 1.0

[node name="door" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="door"]
position = Vector2(143, 130)
shape = SubResource("RectangleShape2D_yx6jd")

[node name="light" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4k835")
}

[node name="physics" type="TileMap" parent="."]
tile_set = SubResource("TileSet_ww0y3")
format = 2
layer_0/tile_data = PackedInt32Array(-65529, 131073, 2, 7, 131073, 2, 65543, 131073, 2, 131079, 131073, 2, 196615, 131073, 2, 262151, 131073, 2, 262150, 131073, 2, 262149, 131073, 2, 262148, 131073, 2, 262147, 131073, 2, 262146, 131073, 2, 262145, 131073, 2, 196609, 131073, 2, 131073, 131073, 2, 65537, 131073, 2, 1, 131073, 2, -65535, 131073, 2, -65534, 131073, 2, -65533, 131073, 2, -65532, 131073, 2, -65531, 131073, 2, -65530, 131073, 2, 6, 196609, 2, 5, 196609, 2, 4, 196609, 2, 3, 196609, 2, 2, 196609, 2)

[node name="TransitionScene" parent="." instance=ExtResource("7_2f6xj")]
visible = false

[node name="PauseMenu" parent="." instance=ExtResource("7_3s8bx")]
position = Vector2(-11, -3)

[connection signal="animation_finished" from="TileMap" to="." method="_on_tile_map_animation_finished"]
[connection signal="animation_finished" from="transitions/clouds" to="." method="_on_clouds_animation_finished"]
[connection signal="animation_finished" from="char_opening_win" to="." method="_on_char_opening_win_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="char_going" to="." method="_on_char_going_animation_finished"]
[connection signal="body_entered" from="door" to="." method="_on_door_body_entered"]
[connection signal="animation_finished" from="light" to="." method="_on_light_animation_finished"]
